# editor4d

./: CMakeLists.txt  README.md  readme.md
emsdk/: emsdk_set_env.sh
emsdk/upstream/: lkgr.json
frontend/: index.html
include/: geometry.h
lib/catch2/: catch_main.cpp
src/: CMakeLists.txt  main.cpp
src/core/: .util.cpp.swp  editor4d_wasm.cpp  geometry.cpp  util.cpp  util.h
src/frontend/: index.html
tests/: .test_geometry4d.cpp.swp  test_geometry4d.cpp  test_util.cpp
